<resources>
    <string name="app_name">Money Exchange</string>
    <string name="amount_money_to_exchange">amount of money to exchange</string>
    <string name="error_message">Something went wrong, please try again later.</string>
    <string name="loading_message">We are loading your content, please wait…</string>
    <string name="to">to</string>
    <string name="asc">ascending</string>
    <string name="desc">descending</string>
    <string name="select_the_origin_currency">Select the origin currency</string>
    <string name="select_the_target_currency">Select the target currency</string>
</resources>